# work-flow

./: work-flow.plugin.zsh
configs/: aliases.zsh  test.zsh
configs/aliases/: base_aliases.sh  cygwin_aliases.zsh  linux_aliases.zsh
configs/analyzer/: CMakeLists.txt  analyzer.proto  analyzer.zsh  analyzer_server.cpp  client.py
configs/chat-tool/: chat_tool.zsh  client.py  server.py
configs/cpp_tools/: CMakeLists.txt  Makefile
configs/cpp_tools/.vim/: qrc.vim
configs/cpp_tools/src/: NV212PNG.cpp  TaskQueue.cpp  systrace.h
configs/cygwin_tools/: apt-cyg.zsh
configs/qrcode/: qrcode.zsh
configs/shell-completion/: base_completion.sh  base_completion.zsh  cygwin_completion.zsh  linux_completion.zsh  termux_completion.zsh
configs/termux-redirect/: tel.zsh
configs/tmux_tools/: .tmux.conf  start_tmux.zsh
configs/zsh_logs/: logger.pre.zsh
web_apps/PngExplorer/: PngViewer-V1.html  PngViewer-V2.html  PngViewer.html
web_apps/perf-trace-analyzer/: systrace-visualizer.html  systrace-visualizer.js
web_extensions/open-path-explorer/: background.js  manifest.json
web_extensions/open-path-explorer/native-host-setup/: install_host.bat  install_host.sh  open_path_host.py
web_extensions/perf-trace-analyzer/: systrace-visualizer.html
